# libside

./: Cargo.toml  README.md  design.md  run.sh
demo-data/: add-convenience-commands.sh
demo-data/dpkg/: 01_nodoc
demo-data/nginx/: html-site  nginx.conf  php-site
demo-data/php-fpm/: mysql-env.conf  php-fpm.conf
docker/demo/: Dockerfile
libside/: Cargo.toml
libside-procmacro/: Cargo.toml
libside-procmacro/src/: lib.rs
libside/examples/: demo.rs
libside/src/: apply.rs  graph.rs  lib.rs  requirements.rs  system.rs  utils.rs
libside/src/builder/: apply.rs  apt.rs  fs.rs  mod.rs  mysql.rs  nginx.rs  path.rs  php_fpm.rs  systemd.rs  users.rs
libside/src/config/: systemd.rs
libside/src/secrets/: keys.rs  mod.rs  password.rs
libside/src/testing/: mod.rs
libside/tests/: empty_install.rs  files.rs
