[package]
name = "libside"
version = "0.2.0"
authors = ["ferrouille <git@ferrouille.nl>"]
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/ferrouille/libside"
description = "a library for building configuration management tools"
exclude = ["examples/"]

[dependencies]
etc-passwd = "0.1.1"
itertools = "0.10"
paste = "1.0"
gensym = "0.1"
serde = { version = "1.0.124", features = ["derive"] }
toml = "0.5"
serde_json = "1.0"
structopt = "0.3"
thiserror = "1.0"
libside-procmacro = { version = "0.1.0", path = "../libside-procmacro" }
sha3 = "0.10"
rand = "0.8"
openssl = "0.10"
base64 = "0.13"
typemap = "0.3"
lazy_static = "1.4"